2A/05_Projet_GL/src/test/deca/context/invalid/complet/21_decl_param_void.deca
// Description :
//    decl Param avec void 
// Resultats :
//    ligne 11 : le type attendu doit étre différent de void   
// Historique :
//  cree le 16/01/2024

class A {
    int x ; 

    int getX(void a) {

    }
}